intel/bench_214_new/extr_.BGAQRCode-Androidzbarsrcmainjnilibiconv-1.15libcp932ext.h_cp932ext_wctomb_with_main/log.txt
bench_214_new/extr_.BGAQRCode-Androidzbarsrcmainjnilibiconv-1.15libcp932ext.h_cp932ext_wctomb_with_main/extr_.BGAQRCode-Androidzbarsrcmainjnilibiconv-1.15libcp932ext.h_cp932ext_wctomb_with_main.c:40:32: error: use of undeclared identifier 'NULL'
    const Summary16 *summary = NULL;
                               ^
1 error generated.
HLS FPGA Parse FAILED.
